// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Separator snapshot applies custom className 1`] = `
<div
  class="shrink-0 bg-border h-[1px] w-full my-4"
  data-orientation="horizontal"
  role="none"
/>
`;

exports[`Separator snapshot renders default horizontal separator 1`] = `
<div
  class="shrink-0 bg-border h-[1px] w-full"
  data-orientation="horizontal"
  role="none"
/>
`;

exports[`Separator snapshot renders non-decorative separator 1`] = `
<div
  class="shrink-0 bg-border h-[1px] w-full"
  data-orientation="horizontal"
  role="separator"
/>
`;

exports[`Separator snapshot renders vertical separator 1`] = `
<div
  class="shrink-0 bg-border h-full w-[1px]"
  data-orientation="vertical"
  role="none"
/>
`;
